--- a/first-angular-app/src/app/components/header.component.html
+++ b/first-angular-app/src/app/components/header.component.html
@@ -23,6 +23,12 @@
         
         background-color: #81dfa5;
     }
+
+    li {
+        display: inline-block;
+        padding: 0 1rem;
+    }
+
 </style>
 
 <header>
@@ -33,6 +39,7 @@
     <h4>My first angular app for college - Faculdade Descomplica - Isaías Rodrigues Silva</h4>
     <nav>
         <ul>
+            <li><a [routerLink]="['/']" >Home</a></li>
             <li><a [routerLink]="['/about-me']" >Sobre Mim</a></li>
         </ul>
     </nav>
